Use the executable path offered by the cmake server

BUG: 357574