projectmanagers/cmake/cmakeprojectdata.h
@@ -62,6 +62,7 @@ public:
 
     Type type;
     QString name;
+    KDevelop::Path::List artifacts;
 };
 Q_DECLARE_TYPEINFO(CMakeTarget, Q_MOVABLE_TYPE);
 inline QDebug &operator<<(QDebug debug, const CMakeTarget& target) {
